--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.Gighub"
         tools:targetApi="31">
         <activity
+            android:name=".ChatAdapter"
+            android:exported="false"
+            android:label="@string/title_activity_chat_adapter"
+            android:theme="@style/Theme.Gighub" />
+        <activity
+            android:name=".ActivitySendMessage"
+            android:exported="false"
+            android:label="@string/title_activity_send_message"
+            android:theme="@style/Theme.Gighub" />
+        <activity
             android:name=".ChatActivity"
             android:exported="false"
             android:label="@string/title_activity_chat"
