--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,37 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gighub"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".ProfileOneActivity"
+            android:exported="false"
+            android:label="@string/title_activity_profile_one"
+            android:theme="@style/Theme.Gighub" />
+        <activity
+            android:name=".DiscoveryTwoFavoriteActivity"
+            android:exported="false"
+            android:label="@string/title_activity_discovery_two_favorite"
+            android:theme="@style/Theme.Gighub" />
+        <activity
+            android:name=".DiscoveryTwoLikeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_discovery_two_like"
+            android:theme="@style/Theme.Gighub" />
+        <activity
+            android:name=".DiscoveryTwoActivity"
+            android:exported="false"
+            android:label="@string/title_activity_discovery_two"
+            android:theme="@style/Theme.Gighub" />
+        <activity
+            android:name=".DiscoveryActivity"
+            android:exported="false"
+            android:label="@string/title_activity_discovery"
+            android:theme="@style/Theme.Gighub" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false"
+            android:label="@string/title_activity_register"
+            android:theme="@style/Theme.Gighub" />
         <activity
             android:name=".ChatOverviewActivity"
             android:exported="false"
@@ -33,27 +63,17 @@
             android:label="@string/title_activity_chat"
             android:theme="@style/Theme.Gighub" />
         <activity
-            android:name=".ui.login.RegisterActivity"
-            android:exported="false"
-            android:label="@string/title_activity_register" />
-        <activity
             android:name=".LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login_page"
-            android:theme="@style/Theme.Gighub" />
-        <activity
-            android:name=".ui.login.LoginActivity"
             android:exported="false"
             android:label="@string/title_activity_login" />
         <activity
             android:name=".ArtistHomeActivity"
             android:exported="false"
-            android:label="ArtistHomeActivity"/>
-
+            android:label="ArtistHomeActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
