Did a lot, added new files and made some more kotlin code to connect everything the right way

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Gighub"
         tools:targetApi="31">
         <activity
+            android:name=".RegisterArtistActivity"
+            android:exported="false"
+            android:label="@string/title_activity_register_artist"
+            android:theme="@style/Theme.Gighub" />
+        <activity
             android:name=".ProfileOneActivity"
             android:exported="false"
             android:label="@string/title_activity_profile_one"
