--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.Gighub"
         tools:targetApi="31">
         <activity
+            android:name=".ProfileVenueActivity"
+            android:exported="false"
+            android:label="@string/title_activity_profile_venue"
+            android:theme="@style/Theme.Gighub" />
+        <activity
+            android:name=".ProfileArtistActivity"
+            android:exported="false"
+            android:label="@string/title_activity_profile_artist"
+            android:theme="@style/Theme.Gighub" />
+        <activity
             android:name=".RegisterArtistActivity"
             android:exported="false"
             android:label="@string/title_activity_register_artist"
